# vtol_sim

./: Cargo.toml
src/: background.rs  ball.rs  bicopter.rs  controllers.rs  geometry.rs  graphical_utils.rs  main.rs  math_helpers.rs  reference_frame.rs  world.rs
src/ball/: math_helpers.rs  mod.rs
src/bicopter/: angle_controlled_bicopter.rs  bicopter_dynamics.rs  bicopter_physics.rs  bicopter_plant.rs  interactive_gain_tuning.jl  mod.rs  plain_bicopter.rs  position_controlled_bicopter.rs
src/plane/: mod.rs  plane_dynamics.rs
src/vehicles/: controllers.rs  mod.rs
src/vehicles/bicopter/: angle_controlled_bicopter.rs  bicopter_dynamics.rs  interactive_gain_tuning.jl  mod.rs  plain_bicopter.rs  position_controlled_bicopter.rs
src/vehicles/plane/: mod.rs  plane_dynamics.rs
src/vehicles/rocket/: mod.rs
